--- a/include/frontmatter/Abstract.tex
+++ b/include/frontmatter/Abstract.tex
@@ -9,7 +9,7 @@ Chalmers University of Technology \setlength{\parskip}{0.5cm}
 \setlength{\parskip}{0pt plus 1.0pt}
 \section*{Abstract}
 The Autobike project was started at Chalmers in 2017 with the goal of creating a
-self driving bike, which could be used to test the safety systems in cars. The part of the project whose aim is the basis for this report is the implementation of a balancing algorithm in the existing program for one version of the bike, the so called \textit{red bike}. This algorithm has the purpose of making the bike be able to balance on its own, whilst driving forward. The hardware required to reach this goal already exists, and will therefore be left as is. This bike uses the graphical programming environment LabVIEW for its main program, although in some situations or for some features, a text based programming language is preferred. LabVIEW can for this reason call shared libraries using the \textit{Call Library Function Node}. In the case of this project, the balancing algorithm has been translated from Python to C. The algorithm uses the roll rate of the bike to calculate a duty cycle, this value is then sent to a motor which steers the front wheel. Code to control the motor which drives the bike forward has also been written. This code is called from LabVIEW using the same method as for the balancing algorithm, and from an inputted RPM value returns a command which is sent using UART from LabVIEW to the VESC motor controller. A secondary goal of the project has been to improve the development experience of the code by reorganizing code, removing unnecessary files, and uploading the code to a public GitHub repository. The result of implementing the balancing algorithm and the code to control the forward motor is the steering motor being able to steer the front wheel when the bike leans, and the forward motor can be controlled by setting a RPM value in LabVIEW. The bike can, however, not balance on its own while driving forward. The reason for this is likely to be a combination of hardware issues, mainly the dimensions and weight of the electronics box, and the balancing algorithm not being tuned correctly.
+self driving bike, which could be used to test the safety systems in cars. The part of the project whose aim is the basis for this report is the implementation of a balancing algorithm in the existing program for one version of the bike, the so called \textit{red bike}. This algorithm has the purpose of making the bike be able to balance on its own, whilst driving forward. The hardware required to reach this goal already exists, and will therefore be left as is. This bike uses the graphical programming environment LabVIEW for its main program, although in some situations or for some features, a text based programming language is preferred. LabVIEW can for this reason call shared libraries using the \textit{Call Library Function Node}. In the case of this project, the balancing algorithm has been translated from Python to C. The algorithm uses the roll rate of the bike to calculate a duty cycle, this value is then sent to a motor which steers the front wheel. Code to control the motor which drives the bike forward has also been written. This code is called from LabVIEW using the same method as for the balancing algorithm, and from an inputted RPM value returns a command which is sent using UART from LabVIEW to the VESC motor controller. A secondary goal of the project has been to improve the development experience of the code by reorganizing code, removing unnecessary files, and uploading the code to a public GitHub repository. The result of implementing the balancing algorithm and the code to control the forward motor is the bike being able to balance on its own whilst driving forward.
 
 % KEYWORDS (MAXIMUM 10 WORDS)
 \vfill
