--- a/include/frontmatter/Acknowledgements.tex
+++ b/include/frontmatter/Acknowledgements.tex
@@ -2,7 +2,9 @@
 \thispagestyle{plain}			% Supress header
 \section*{Acknowledgements}
 
-Firstly, we would like to thank our examiner and supervisor Jonas Sjöberg for his guidance and for giving us the opportunity to work on the Autobike. We would also like to thank Henrik Falk at Mälardalen University for helping us getting started with LabVIEW, and for answering any questions that we had about the program during the course of the project. Lastly, we would like to thank Guanzheng Wen who has worked with us on the Autobike and helped us with solving problems and testing the bike.
+This bachelor's thesis was written by to students at the Mechatronics Engineering program at Chalmers University of Technology during the spring of 2022.
+
+We would like to thank our examiner and supervisor Jonas Sjöberg for his guidance and for giving us the opportunity to work on the Autobike. We would also like to thank Henrik Falk at Mälardalen University for helping us getting started with LabVIEW, and for answering any questions that we had about the program during the course of the project. Lastly, we would like to thank Guanzheng Wen and Antonin Le Noc who has worked with us on the Autobike and helped us with solving problems and testing the bike.
 
 \vspace{1.5cm}
 \begin{flushright}
