--- a/include/frontmatter/Titlepage.tex
+++ b/include/frontmatter/Titlepage.tex
@@ -57,8 +57,8 @@ Undefined Thesis type in settings.tex
 \mbox{}
 \vfill
 \renewcommand{\familydefault}{\sfdefault} \normalfont % Set cover page font
-\textbf{{\Huge 	Programming a self driving bike}} 	\\[0.5cm]
-{\Large Implementing a balancing algorithm in a self driving bike}\\[0.5cm]
+\textbf{{\Huge 	Programming a Self Driving Bike}} 	\\[0.5cm]
+{\Large Implementing a Balancing Algorithm in a Self Driving Bike}\\[0.5cm]
 Bachelor's Thesis in Department of Electrical Engineering \setlength{\parskip}{1cm}
 
 \noindent
@@ -88,8 +88,8 @@ Bachelor's Thesis in Department of Electrical Engineering \setlength{\parskip}{1
 \thispagestyle{empty}
 \begin{center}
 	\textsc{\large Bachelor's thesis \the\year}\\[4cm]
-	\textbf{\Large Programming a self driving bike} \\[1cm]
-	{\large Implementing a balancing algorithm in a self driving bike}\\[1cm]
+	\textbf{\Large Programming a Self Driving Bike} \\[1cm]
+	{\large Implementing a Balancing Algorithm in a Self Driving Bike}\\[1cm]
 	{\large ELLIOT ANDERSSON}\\
 	{\large HANNES HULTERGÅRD}
 	
@@ -117,8 +117,8 @@ Bachelor's Thesis in Department of Electrical Engineering \setlength{\parskip}{1
 \newpage
 \thispagestyle{plain}
 \vspace*{4.5cm}
-Programming a self driving bike\\
-Implementing a balancing algorithm in a self driving bike\\
+Programming a Self Driving Bike\\
+Implementing a Balancing Algorithm in a Self Driving Bike\\
 ELLIOT ANDERSSON, HANNES HULTERGÅRD \setlength{\parskip}{1cm}
 
 \copyright ~ ELLIOT ANDERSSON, HANNES HULTERGÅRD, \the\year. \setlength{\parskip}{1cm}
