--- a/references.bib
+++ b/references.bib
@@ -81,6 +81,14 @@
     url = {https://www.maxongroup.com/medias/sys_master/root/8930313371678/409510-ESCON-50-5-Hardware-Reference-En.pdf}
 }
 
+@misc{ESCON2014ESCONOverview,
+    title = {{ESCON Overview}},
+    year = {2014},
+    author = {{ESCON}},
+    month = {4},
+    url = {https://docs.rs-online.com/ed0a/0900766b81376a21.pdf}
+}
+
 @misc{Trochimiuk2021FPGAUsed,
     title = {{FPGA programming—how it works and where it can be used}},
     year = {2021},
