--- a/include/backmatter/Code.tex
+++ b/include/backmatter/Code.tex
@@ -4,23 +4,6 @@ This Appendix contains some of the code which have been used on the bike, or dur
 
 \section{Balancing Algorithm} \label{code:balancing}
 
-\lstset{
-    language=C,
-    basicstyle=\ttfamily\footnotesize,
-    breaklines=true,
-    morekeywords={matlab2tikz},
-    keywordstyle=\color{blue},
-    morekeywords=[2]{1}, keywordstyle=[2]{\color{black}},
-    identifierstyle=\color{black},
-    stringstyle=\color{mylilas},
-    commentstyle=\color{mygreen},
-    showstringspaces=false,%without this there will be a symbol in the places where there is a space
-    numbers=left,%
-    numberstyle={\tiny \color{black}},% size of the numbers
-    numbersep=9pt, % this defines how far the numbers are from the text
-    belowskip=1em,
-}
-
 \begin{lstlisting}
 // balancing.h
 
@@ -62,9 +45,16 @@ extern double stabilizeBike(double rollRate, double Kp, double Ki, double Kd) {
     return steeringPWM;
 }
 
+// Take in the wanted angular velocity of the handlebar,
+// And return the required duty cycle for that velocity.
 double calculateSteeringPWM(double angularVelocity) {
-    double rpm = -angularVelocity * 30 / pi * gearRatio;  // To comply with Right Hand Rule
-    return 50 + rpm * 40.0 / 1000.0;
+    // Convert from angular velocity (rad/s) of the handlebar,
+    // to rpm of the motor.
+    double rpm = -angularVelocity * 30 / pi * gearRatio;
+
+    // Convert from rpm to duty cycle,
+    // 4000 is the maximum speed of the motor (configured in Escon Studio).
+    return 50 + rpm * 40.0 / 4000.0;
 }
 
 double pid(double reference, double currentValue, double Kp, double Ki, double Kd) {
@@ -299,8 +289,13 @@ void bufferAppendInt32(uint8_t *buffer, int number, int *index) {
 }
 
 \begin{lstlisting}
+% To plot the logged data, change the file path to the correct log
+% file. It might also be necessary to uncomment / comment some
+% parts of the code, depending on what you want to plot. The xlim
+% and ylim of some plots will also have to be adjusted.
+
 % Read all of the data in the TDMS file.
-data = tdmsread("Logs/Test4.tdms");
+data = tdmsread("Logs/testLog.tdms");
 
 %% Encoder
 
@@ -313,31 +308,45 @@ position = table2array(data{1,1}(:,2));
 velocity = table2array(data{1,1}(:,3));
 
 figure;
-yyaxis left;
+%yyaxis left;
 % 611 is the conversion ratio from counts on the encoder
 % to degrees.
 plot(time1-time1(1),position/611);
-ylim([-20,20]);
+ylim([-10,10]);
 ylabel("Position (degrees)");
 hold on;
-yyaxis right;
-plot(time1-time1(1),velocity/611*1000);
-ylim([-50,50]);
-ylabel("Velocity (degrees/s)");
+%yyaxis right;
+%plot(time1-time1(1),velocity/611*1000);
+%ylim([-50,50]);
+%ylabel("Velocity (degrees/s)");
 xlabel("Time (seconds)");
-xlim([7,11.5]);
+xlim([22,30]);
 title("Steering motor readings");
 hold off;
 
 %% Gyro
 time2 = table2array(data{1,2}(:,1));
-rollRate = table2array(data{1,2}(:,2));
+X = table2array(data{1,2}(:,2));
+Y = table2array(data{1,2}(:,3));
+Z = table2array(data{1,2}(:,4));
 
 figure;
-plot(time2-time2(1),rollRate);
-ylabel("Roll rate");
+hold on;
+plot(time2-time2(1),X);
+plot(time2-time2(1),Y);
+plot(time2-time2(1),Z);
+ylabel("Angular velocity (rad/s)");
 xlabel("Time (seconds)");
 title("Gyro");
+%yyaxis right;
+
+angle = zeros(length(Z),1);
+for i = 1:length(Z) - 1
+    angle(i + 1) = angle(i) + (time2(i+1) - time2(i)) * Z(i);
+end
+%plot(time2-time2(1),angle);
+%ylabel("Lean angle (radians)");
+legend("X", "Y", "Z", "Lean angle");
 
 %% Steering motor
 
@@ -360,10 +369,44 @@ ylim([0,1]);
 ylabel("Duty cycle");
 hold on;
 yyaxis right;
-plot(time2-time2(1),rollRate);
-ylabel("Roll rate");
-ylim([-10,10]);
-xlim([7,11.5]);
+plot(time2-time2(1),Z);
+ylabel("Roll rate (rad/s)");
+ylim([-1.5,1.5]);
+xlim([22,30]);
 xlabel("Time (seconds)");
 title("Duty cycle and Roll rate");
+
+%% PWM vs angular velocity
+
+pwm01 = tdmsread("Logs/pwm01.tdms");
+pwm02 = tdmsread("Logs/pwm02.tdms");
+pwm03 = tdmsread("Logs/pwm03.tdms");
+pwm04 = tdmsread("Logs/pwm04.tdms");
+
+time01 = table2array(pwm01{1,1}(:,1));
+velocity01 = table2array(pwm01{1,1}(:,3));
+position01 = table2array(pwm01{1,1}(:,2));
+
+time02 = table2array(pwm02{1,1}(:,1));
+velocity02 = table2array(pwm02{1,1}(:,3));
+
+time03 = table2array(pwm03{1,1}(:,1));
+velocity03 = table2array(pwm03{1,1}(:,3));
+
+time04 = table2array(pwm04{1,1}(:,1));
+velocity04 = table2array(pwm04{1,1}(:,3));
+
+%%
+
+figure;
+hold on;
+plot(time01 - time01(1) - 1.56,velocity01/611*1000);
+plot(time02 - time02(1) - 0.9,velocity02/611*1000);
+plot(time03 - time03(1) - 1.59,velocity03/611*1000);
+plot(time04 - time04(1) - 0.78,velocity04/611*1000);
+xlabel("Time (seconds)");
+ylabel("Velocity (degrees/second)");
+xlim([-1,9]);
+legend("duty cycle = 0.1", "duty cycle = 0.2", "duty cycle = 0.3", "duty cycle = 0.4", 'Location','northwest');
+title("Relation between duty cycle and angular velocity");
 \end{lstlisting}
